--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^20.5.6",
     "@typescript-eslint/parser": "^6.4.1",
     "@vueuse/nuxt": "^10.4.0",
+    "daisyui": "^3.6.3",
     "eslint": "^8.48.0",
     "nuxt": "^3.7.0"
   }
