--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vueuse/nuxt": "^10.4.0",
     "daisyui": "^3.6.3",
     "eslint": "^8.48.0",
-    "nuxt": "^3.7.0"
+    "nuxt": "^3.7.0",
+    "nuxt-icon": "^0.5.0"
   }
 }
