--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
   "parserOptions": {
     "parser": "@typescript-eslint/parser"
   },
-  "extends": ["@nuxtjs/eslint-config-typescript"],
+  "extends": ["@nuxtjs/eslint-config-typescript", "plugin:tailwindcss/recommended"],
   "plugins": [],
   "rules": {
     "vue/no-multiple-template-root": "off"
