--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev --host",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
@@ -18,6 +18,7 @@
     "@vueuse/nuxt": "^10.4.1",
     "daisyui": "^3.6.3",
     "eslint": "^8.48.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "nuxt": "^3.7.0",
     "nuxt-icon": "^0.5.0"
   }
