--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxt/devtools": "^0.8.2",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
+    "@nuxtjs/supabase": "^1.0.2",
     "@nuxtjs/tailwindcss": "^6.8.0",
     "@types/node": "^20.5.9",
     "@typescript-eslint/parser": "^6.6.0",
@@ -21,5 +22,10 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "nuxt": "^3.7.0",
     "nuxt-icon": "^0.5.0"
+  },
+  "dependencies": {
+    "@vee-validate/zod": "^4.11.3",
+    "vee-validate": "^4.11.3",
+    "zod": "^3.22.2"
   }
 }
