--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nuxt-icon": "^0.5.0"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
     "@vee-validate/zod": "^4.11.3",
     "vee-validate": "^4.11.3",
     "zod": "^3.22.2"
