--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "^0.8.3",
+    "@nuxt/devtools": "1.0.0-beta.0",
     "@nuxtjs/eslint-config-typescript": "^12.1.0",
     "@nuxtjs/eslint-module": "^4.1.0",
-    "@nuxtjs/supabase": "^1.1.0",
+    "@nuxtjs/supabase": "^1.1.2",
     "@nuxtjs/tailwindcss": "^6.8.0",
-    "@types/node": "^20.8.0",
-    "@typescript-eslint/parser": "^6.6.0",
+    "@types/node": "^20.8.2",
+    "@typescript-eslint/parser": "^6.7.4",
     "@vueuse/nuxt": "^10.4.1",
-    "daisyui": "^3.8.2",
+    "daisyui": "^3.8.3",
     "eslint": "^8.50.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
-    "nuxt": "^3.7.1",
+    "nuxt": "^3.7.4",
     "nuxt-icon": "^0.5.0"
   },
   "dependencies": {
