--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "daisyui": "^3.8.3",
     "eslint": "^8.50.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "lodash": "^4.17.21",
     "nuxt": "^3.7.4",
     "nuxt-icon": "^0.5.0"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.11",
     "@vee-validate/zod": "^4.11.7",
+    "pinia-plugin-persistedstate": "^3.2.0",
     "vee-validate": "^4.11.7",
     "zod": "^3.22.2"
   }
