--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
     "@vee-validate/zod": "^4.11.8",
+    "base64-arraybuffer": "^1.0.2",
+    "dom-to-image-more": "^3.2.0",
     "pinia-plugin-persistedstate": "^3.2.0",
     "vee-validate": "^4.11.8",
     "zod": "^3.22.2"
